# ffmpegZkk

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/zkk/myffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/zkk/myffmpeg/: MainActivity.java
app/src/test/java/com/zkk/myffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
